...
            }
            .buttonStyle(AddRowButtonStyle())
            .accessibilityIdentifier("CollectionFilterButtonIdentifier")
            
            if hasActiveFilters {
...
                            .stroke(Color.buttonBorderColor, lineWidth: 1))
                }
                .accessibilityIdentifier("TableMoreButtonIdentifier")
                .popover(isPresented: $showingPopover) {
                    if #available(iOS 16.4, *) {
...
                                .padding(.horizontal, 16)
                                .padding(.top, 16)
                                .accessibilityIdentifier("TableInsertRowIdentifier")
                                if !hasActiveFilters {
                                    Button(action: {
...
                                    .disabled(viewModel.tableDataModel.shouldDisableMoveUp)
                                    .padding(.horizontal, 16)
                                    .accessibilityIdentifier("TableMoveUpRowIdentifier")
                                    
                                    Button(action: {
...
                                    .disabled(viewModel.tableDataModel.shouldDisableMoveDown)
                                    .padding(.horizontal, 16)
                                    .accessibilityIdentifier("TableMoveDownRowIdentifier")
                                    
                                }
...
                                .padding(.horizontal, 16)
                                .padding(.top, viewModel.tableDataModel.selectedRows.count > 1 ? 16 : 0)
                                .accessibilityIdentifier("TableEditRowsIdentifier")
                            }

...
                            .padding(.horizontal, 16)
                            .padding(.bottom, 10)
                            .accessibilityIdentifier("TableDeleteRowIdentifier")

//                            Button(action: {
...
                            })
                            .disabled(viewModel.tableDataModel.shouldDisableMoveUpFilterActive)
                            .accessibilityIdentifier("UpperRowButtonIdentifier")
                            
                            Spacer()
...
                            })
                            .disabled(viewModel.tableDataModel.shouldDisableMoveDownFilterActive)
                            .accessibilityIdentifier("LowerRowButtonIdentifier")
                            
                            if viewModel.tableDataModel.mode == .fill {
...
                                    }
                                })
                                .accessibilityIdentifier("PlusTheRowButtonIdentifier")
                            }
                        } else {
...
                            )
                        })
                        .accessibilityIdentifier("ApplyAllButtonIdentifier")
                        .disabled(isLoading)
                        
...
                                .frame(minHeight: 40)
                                .cellBorder(isFocused: isFocused)
                                .accessibilityIdentifier("EditRowsTextFieldIdentifier")
                        case .dropdown:
                            fieldTitle(col, isCellFilled: isEffectivelyFilled, schemaKey: header.schemaKey)
...
