...
//                                        .foregroundColor(.black)
//                                }
//                                .padding(.all, 5)
//                                .background(Color.white)
//                                .cornerRadius(10)
//                            })
//                            .accessibilityIdentifier("ImageMoreIdentifier")
//                            .shadow(radius: 4)
//                        }
//                        .padding(.trailing, 10)
//                    }
//                    .padding(.bottom, 20)
                }
...
            .overlay(
                RoundedRectangle(cornerRadius: 10)
                    .stroke(style: StrokeStyle(lineWidth: 1, dash: [5]))
                    .foregroundColor(.gray)
            )
        })
        .accessibilityIdentifier("ImageUploadImageIdentifier")
    }
    
    var deleteButton: some View {
        Button(action: {
            deleteAction()
        }, label: {
...
                                    .stroke(Color.allFieldBorderColor, lineWidth: 1)
                            }
                        })
                        .onTapGesture {
                            handleImageSelection(image)
                        }
                        .accessibilityIdentifier("DetailPageImageSelectionIdentifier")
                }
            }
        }
    }
    
    private func handleImageSelection(_ image: UIImage) {
...
