...
    
    var body: some View {
        ScrollView {
            VStack(alignment: .leading, spacing: 16) {
                // Main Content
                HStack {
                    Text("Filter")
                        .font(.system(size: 15, weight: .bold))
                        
                    Spacer()
                    
                    Button(action: {
                        Task {
...
                                }
                            }
                        } label: {
                            Color.clear
                                .contentShape(Rectangle())
                        }
                        .accessibilityIdentifier("SelectSchemaTypeIDentifier")
                        .accessibilityLabel(selectedSchemaKey.isEmpty ? "Select schema type" : getSelectedSchemaTitle())
                    )
                    if !selectedSchemaKey.isEmpty {
                        sortingView
                        VStack(alignment: .leading) {
                            ForEach(0..<totalFiltersCount, id: \.self) { i in
...
                            }
                        }
                    } label: {
                        Color.clear
                            .contentShape(Rectangle())
                    }
                    .accessibilityIdentifier("CollectionFilterColumnSelectorIdentifier")
                    .accessibilityLabel(currentSelectedFilterColumnID.isEmpty ? "Select column type" : getSelectedFilteredColumnTitle(columnID: currentSelectedFilterColumnID))
                )
                if let index = collectionFilterModels.firstIndex(where: { $0.colID == currentSelectedFilterColumnID && $0.schemaKey == selectedSchemaKey }) {
                    if let column = getSelectedColumn(columnID: currentSelectedFilterColumnID) {
                        CollectionSearchBar(
                            model: $collectionFilterModels[index],
...
